--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Bundle Install
         run: |
+          gem install bundler
           bundle install --jobs 4 --retry 3
 
       - name: Run Unit Test
